# monster-discount

./: .gitignore  README.md  docker-compose.yml  grafana.json  market-search  output.csv  scrape.py
api/: Cargo.toml
api/db/migrations/: 0001-init.sql
api/src/: main.rs
app/: .gitignore  pubspec.yaml
app.old/android/app/src/profile/: AndroidManifest.xml
app.old/ios/: firebase_app_id_file.json
app.old/ios/Runner/: GoogleService-Info.plist
app.old/ios/Runner.xcodeproj/: project.pbxproj
app.old/lib/: api.dart  firebase_options.dart  main.dart  market.dart  market.g.dart  offers_page.dart
app/android/app/: build.gradle  google-services.json
app/android/app/src/main/: AndroidManifest.xml
app/ios/: firebase_app_id_file.json
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  firebase_options.dart  home.dart  intro.dart  main.dart  market.dart  offers.dart  offers.g.dart  offers_page.dart  rewe_api.dart  settings.dart
app/web/: index.html
scraper/: .env  .env.production  20220808014504_init.sql  Cargo.toml  config.toml  dump.sql  requirements.txt  scrape.py
scraper/migrations/: 20220808014504_init.sql  20230115013601_trinkgut.sql  20230614163236_refactor.sql  20230614165313_remove-store-from-rewe_markets.sql  20230614165554_remove-wants_aldi-from-rewe_token__market.sql
scraper/src/: aldi_api.rs  db.rs  main.rs  models.rs  rewe_api.rs  telegram.rs
scraper/src/aldi/: api.rs  db.rs  mod.rs  models.rs
scraper/src/rewe/: api.rs  db.rs  mod.rs  models.rs
scraper/src/trinkgut/: db.rs  mod.rs  models.rs  scrape.rs
(+1 files in other folders)
