[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres","chrono", "macros", "migrate", "json"]}
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.57"
serde = "1.0.137"
gcp_auth = "0.7.3"
firebae-cm = "0.1.0"
chrono = "0.4.19"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
